[package]
name = "pog_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dotenvy = "0.15.6"
elliptic-curve = { version = "0.12.3", features = ["ecdh"] }
openssl = "0.10.44"
p256 = { version = "0.11.1", features = ["ecdh"] }
rand = { version = "0.8.5", features = ["nightly"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.6"
curve25519-dalek = "4.0.0-pre.5"
ed25519-dalek = "1.0.1"
rand_os = "0.2.2"
base64 = "0.20.0"

